feat(pagemodel): harden security + typed contract + shell fragments v2 + readiness wiring
harden-pagemodel-security-v2:
- Add PageModelAccessPolicy + PageModelAllowedRoles annotation
- Remove arbitrary /{logicalId} endpoints from tenant and platform controllers
- Resolver checks access policy + provider-level role revalidation (403 on denial)
- Add typed contract package: ActionItem, AlertItem, NewsItem, PlanItem,
  PublicContentPayload, QuickActionsPayload, ImageRef, Badge, NavigationEntry,
  BrandBlock, NavigationSection, TopAppBar, NavigationDrawer, PublicHeader,
  ShellFragment — no Map<String,Object> in rendering payloads (D4)
- Generate v2 shell fragments: private_shell_cashier, private_shell_tenantadmin,
  private_shell_superadmin; update public_header_links + public_footer_links
- Rebind dashboard templates to consolidated shell fragment keys

dashboard-overview-runtime-v1:
- Wire TenantReadinessAssembler with real section checks (identity/outlets/terminals/sellers)
  via TenantCatalog + QueryBus; remaining sections stay UNKNOWN until domain queries added
- All dashboard assemblers converted to typed records (zero Map<String,Object> in payloads)
- Mark completed tasks in both OpenSpec task files

cashier/tickets: add TicketCashierVerificationView, GetTicketForCashierVerificationQuery,
  GetTicketForCashierVerificationQueryHandler + CashierTicketVerificationResponse

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>