@@ -11,6 +11,11 @@ import com.tchalanet.server.core.analytics.api.model.PlatformDashboardStatsView;
 import com.tchalanet.server.core.analytics.api.query.GetPlatformDashboardStatsQuery;
 import com.tchalanet.server.core.subscription.api.query.GetPlatformSubscriptionStatsQuery;
 import com.tchalanet.server.core.subscription.api.query.PlatformSubscriptionStatsView;
+import com.tchalanet.server.features.pagemodel.contract.ActionItem;
+import com.tchalanet.server.features.pagemodel.contract.AlertItem;
+import com.tchalanet.server.features.pagemodel.contract.NewsItem;
+import com.tchalanet.server.features.pagemodel.contract.PublicContentPayload;
+import com.tchalanet.server.features.pagemodel.contract.QuickActionsPayload;
 import com.tchalanet.server.platform.publiccontent.api.PublicContentApi;
 import com.tchalanet.server.platform.publiccontent.api.model.PublicContentItemView;
 import java.math.BigDecimal;
@@ -54,13 +59,13 @@ public class PlatformAdminDashboardPayloadAssembler {
   public Payload assemble(TchRequestContext ctx) {
     LocalDate today = LocalDate.now(ZoneOffset.UTC);
 
-    Map<String, Object> health          = buildHealth();
-    Map<String, Object> tenants         = buildTenantsKpi(today);
-    Map<String, Object> subscriptions   = buildSubscriptions();
-    Map<String, Object> onboardingAlerts = buildOnboardingAlerts();
-    Map<String, Object> platformAlerts  = buildPlatformAlerts();
-    Map<String, Object> publicContent   = buildPublicContent();
-    Map<String, Object> quickActions    = buildQuickActions();
+    PlatformHealthPayload health              = buildHealth();
+    TenantKpiSummaryPayload tenants           = buildTenantsKpi(today);
+    SubscriptionSummaryPayload subscriptions  = buildSubscriptions();
+    OnboardingAlertsPayload onboardingAlerts  = buildOnboardingAlerts();
+    PlatformAlertsPayload platformAlerts      = buildPlatformAlerts();
+    PublicContentPayload publicContent        = buildPublicContent();
+    QuickActionsPayload quickActions          = buildQuickActions();
 
     return new Payload(health, tenants, subscriptions, onboardingAlerts,
         platformAlerts, publicContent, quickActions);
@@ -70,16 +75,28 @@ public class PlatformAdminDashboardPayloadAssembler {
    * Platform health snapshot from Spring Boot's {@link org.springframework.boot.actuate.health.HealthEndpoint}.
    * No SQL — reads the in-process health registry the actuator already maintains.
    */
-  private Map<String, Object> buildHealth() {
+  @SuppressWarnings("unchecked")
+  private PlatformHealthPayload buildHealth() {
     PlatformHealthProbe probe = healthProbeProvider.getIfAvailable();
     if (probe == null) {
-      return Map.of("global", "UNKNOWN", "components", Map.of());
+      return new PlatformHealthPayload("UNKNOWN", Map.of());
     }
     try {
       Map<String, Object> snapshot = probe.snapshot();
-      return snapshot != null ? snapshot : Map.of("global", "UNKNOWN", "components", Map.of());
+      if (snapshot == null) {
+        return new PlatformHealthPayload("UNKNOWN", Map.of());
+      }
+      String global = snapshot.getOrDefault("global", "UNKNOWN").toString();
+      Object rawComponents = snapshot.get("components");
+      Map<String, String> components = Map.of();
+      if (rawComponents instanceof Map<?, ?> m) {
+        var typed = new java.util.LinkedHashMap<String, String>();
+        m.forEach((k, v) -> typed.put(String.valueOf(k), String.valueOf(v)));
+        components = java.util.Collections.unmodifiableMap(typed);
+      }
+      return new PlatformHealthPayload(global, components);
     } catch (RuntimeException e) {
-      return Map.of("global", "UNKNOWN", "components", Map.of());
+      return new PlatformHealthPayload("UNKNOWN", Map.of());
     }
   }
 
@@ -87,7 +104,7 @@ public class PlatformAdminDashboardPayloadAssembler {
    * Tenant counts (from catalog) + analytics KPIs (tickets/sales today, top tenants).
    * Two grouped reads bundled in one widget section.
    */
-  private Map<String, Object> buildTenantsKpi(LocalDate today) {
+  private TenantKpiSummaryPayload buildTenantsKpi(LocalDate today) {
     long total = 0L;
     long active = 0L;
     long suspended = 0L;
@@ -104,17 +121,16 @@ public class PlatformAdminDashboardPayloadAssembler {
       log.warn("platform_admin_dashboard: tenant catalog stats unavailable — {}", e.getMessage());
     }
 
-    long ticketsSoldToday   = 0L;
+    long ticketsSoldToday      = 0L;
     BigDecimal grossSalesToday = BigDecimal.ZERO;
     BigDecimal netToday        = BigDecimal.ZERO;
-    List<Map<String, Object>> topTenants = List.of();
+    List<TenantRankItem> topTenants = List.of();
 
     try {
       PlatformDashboardStatsView statsView =
           queryBus.ask(GetPlatformDashboardStatsQuery.today(today));
       if (statsView != null) {
         if (statsView.summary() != null) {
-          // Use analytics totalTenants as fallback if catalog returned zero
           if (total == 0L) total = statsView.summary().totalTenants();
           ticketsSoldToday = statsView.summary().ticketsSold();
           grossSalesToday  = statsView.summary().grossSales() != null
@@ -124,11 +140,11 @@ public class PlatformAdminDashboardPayloadAssembler {
         }
         if (statsView.topTenants() != null) {
           topTenants = statsView.topTenants().stream()
-              .map(r -> Map.<String, Object>of(
-                  "tenantCode",    r.tenantCode() != null ? r.tenantCode() : "",
-                  "ticketsSold",   r.ticketsSold(),
-                  "grossSales",    r.grossSales() != null ? r.grossSales() : BigDecimal.ZERO,
-                  "netRevenue",    r.netRevenueEstimated() != null ? r.netRevenueEstimated() : BigDecimal.ZERO))
+              .map(r -> new TenantRankItem(
+                  r.tenantCode() != null ? r.tenantCode() : "",
+                  r.ticketsSold(),
+                  r.grossSales() != null ? r.grossSales() : BigDecimal.ZERO,
+                  r.netRevenueEstimated() != null ? r.netRevenueEstimated() : BigDecimal.ZERO))
               .toList();
         }
       }
@@ -136,102 +152,156 @@ public class PlatformAdminDashboardPayloadAssembler {
       log.warn("platform_admin_dashboard: analytics KPIs unavailable — {}", e.getMessage());
     }
 
-    return Map.ofEntries(
-        Map.entry("total",            total),
-        Map.entry("active",           active),
-        Map.entry("suspended",        suspended),
-        Map.entry("onboarding",       onboarding),
-        Map.entry("actionRequired",   suspended),
-        Map.entry("ticketsSoldToday", ticketsSoldToday),
-        Map.entry("grossSalesToday",  grossSalesToday),
-        Map.entry("netToday",         netToday),
-        Map.entry("topTenants",       topTenants));
+    return new TenantKpiSummaryPayload(
+        total, active, suspended, onboarding, suspended,
+        ticketsSoldToday, grossSalesToday, netToday, topTenants);
   }
 
-  private Map<String, Object> buildSubscriptions() {
+  private SubscriptionSummaryPayload buildSubscriptions() {
     try {
       PlatformSubscriptionStatsView view = queryBus.ask(new GetPlatformSubscriptionStatsQuery());
       if (view != null) {
-        return Map.of(
-            "active",  (long) view.active(),
-            "trial",   0L,
-            "pastDue", (long) view.pastDue(),
-            "expired", (long) view.canceled(),
-            "total",   (long) view.total(),
-            "byPlan",  view.byPlan() != null ? view.byPlan() : List.of());
+        return new SubscriptionSummaryPayload(
+            view.active(), 0L, view.pastDue(), view.canceled(), view.total(),
+            view.byPlan() != null ? view.byPlan() : List.of());
       }
     } catch (RuntimeException e) {
       log.warn("platform_admin_dashboard: subscription stats unavailable — {}", e.getMessage());
     }
-    return Map.of("active", 0L, "trial", 0L, "pastDue", 0L, "expired", 0L,
-        "total", 0L, "byPlan", List.of());
+    return SubscriptionSummaryPayload.empty();
   }
 
   /**
    * Tenants currently in DRAFT (onboarding in progress) — up to 10.
    * Filtered in-memory; catalog status filter is a V2 addition.
    */
-  private Map<String, Object> buildOnboardingAlerts() {
+  private OnboardingAlertsPayload buildOnboardingAlerts() {
     try {
       TchPage<TenantRegistryView> page = tenantCatalog.listTenants(PageRequest.of(0, 50));
       if (page != null && page.items() != null) {
-        List<Map<String, Object>> items = new ArrayList<>();
+        List<OnboardingAlertItem> items = new ArrayList<>();
         for (TenantRegistryView t : page.items()) {
           if (t.status() == TenantStatus.DRAFT && items.size() < 10) {
-            items.add(Map.of(
-                "tenantId", t.tenantId().value().toString(),
-                "code",     t.code(),
-                "name",     t.name() != null ? t.name() : "",
-                "status",   t.status().name()));
+            items.add(new OnboardingAlertItem(
+                t.tenantId().value().toString(),
+                t.code() != null ? t.code() : "",
+                t.name() != null ? t.name() : "",
+                t.status().name()));
           }
         }
-        return Map.of("items", items, "count", items.size());
+        return new OnboardingAlertsPayload(List.copyOf(items), items.size());
       }
     } catch (RuntimeException e) {
       log.warn("platform_admin_dashboard: onboarding alerts unavailable — {}", e.getMessage());
     }
-    return Map.of("items", List.of(), "count", 0);
+    return OnboardingAlertsPayload.empty();
   }
 
   /** V1 placeholder: no cross-platform alerts aggregate yet (TODO V2). */
-  private Map<String, Object> buildPlatformAlerts() {
-    return Map.of("items", List.of(), "count", 0);
+  private PlatformAlertsPayload buildPlatformAlerts() {
+    return PlatformAlertsPayload.empty();
   }
 
-  private Map<String, Object> buildPublicContent() {
+  private PublicContentPayload buildPublicContent() {
     try {
       List<PublicContentItemView> items =
           publicContentApi.listPlatformAdminDashboardNews(PUBLIC_CONTENT_LIMIT);
-      return Map.of(
-          "items", items.stream()
-              .map(i -> Map.<String, Object>of(
-                  "id",          i.id() != null ? i.id().toString() : "",
-                  "title",       i.title() != null ? i.title() : "",
-                  "snippet",     i.content() != null ? i.content() : "",
-                  "link",        i.sourceUrl() != null ? i.sourceUrl() : "",
-                  "publishedAt", i.publishedAt() != null ? i.publishedAt().toString() : ""))
-              .toList(),
-          "count", items.size());
+      List<NewsItem> news = items.stream()
+          .map(i -> new NewsItem(
+              i.id() != null ? i.id().toString() : "",
+              i.title() != null ? i.title() : "",
+              i.content() != null ? i.content() : "",
+              i.sourceUrl() != null ? i.sourceUrl() : "",
+              i.sourceType() != null ? i.sourceType().name() : "",
+              i.publishedAt() != null ? i.publishedAt().toString() : ""))
+          .toList();
+      return new PublicContentPayload(news, news.size());
     } catch (RuntimeException e) {
       log.warn("platform_admin_dashboard: public content unavailable — {}", e.getMessage());
-      return Map.of("items", List.of(), "count", 0);
+      return PublicContentPayload.empty();
     }
   }
 
-  private Map<String, Object> buildQuickActions() {
-    return Map.of(
-        "actions", List.of(
-            Map.of("id", "CREATE_TENANT",     "label", "Créer un tenant",       "route", "/app/platform/tenants/new"),
-            Map.of("id", "PLATFORM_OVERVIEW", "label", "Aperçu plateforme",     "route", "/app/platform/overview"),
-            Map.of("id", "OPS_HEALTH",        "label", "Santé plateforme",      "route", "/app/platform/ops/health")));
+  private QuickActionsPayload buildQuickActions() {
+    return new QuickActionsPayload(List.of(
+        new ActionItem("CREATE_TENANT",     "quickaction.platform.create_tenant",     "add_business",  "/app/platform/tenants/new"),
+        new ActionItem("PLATFORM_OVERVIEW", "quickaction.platform.overview",          "dashboard",     "/app/platform/overview"),
+        new ActionItem("OPS_HEALTH",        "quickaction.platform.ops_health",        "monitor_heart", "/app/platform/ops/health")));
   }
 
   public record Payload(
-      Map<String, Object> health,
-      Map<String, Object> tenants,
-      Map<String, Object> subscriptions,
-      Map<String, Object> onboardingAlerts,
-      Map<String, Object> platformAlerts,
-      Map<String, Object> publicContent,
-      Map<String, Object> quickActions) {}
+      PlatformHealthPayload health,
+      TenantKpiSummaryPayload tenants,
+      SubscriptionSummaryPayload subscriptions,
+      OnboardingAlertsPayload onboardingAlerts,
+      PlatformAlertsPayload platformAlerts,
+      PublicContentPayload publicContent,
+      QuickActionsPayload quickActions) {}
+
+  // ---- surface-specific typed payload records ----
+
+  /** Platform health snapshot — global status + per-component status map. */
+  public record PlatformHealthPayload(
+      String global,
+      Map<String, String> components) {}
+
+  /** Single tenant row in the "top tenants by volume" ranking. */
+  public record TenantRankItem(
+      String tenantCode,
+      long ticketsSold,
+      BigDecimal grossSales,
+      BigDecimal netRevenue) {}
+
+  /** Tenant KPI summary — counts + analytics for today. */
+  public record TenantKpiSummaryPayload(
+      long total,
+      long active,
+      long suspended,
+      long onboarding,
+      long actionRequired,
+      long ticketsSoldToday,
+      BigDecimal grossSalesToday,
+      BigDecimal netToday,
+      List<TenantRankItem> topTenants) {}
+
+  /** Subscription counts across all tenants. {@code byPlan} is the raw catalog projection. */
+  public record SubscriptionSummaryPayload(
+      long active,
+      long trial,
+      long pastDue,
+      long expired,
+      long total,
+      List<?> byPlan) {
+
+    public static SubscriptionSummaryPayload empty() {
+      return new SubscriptionSummaryPayload(0L, 0L, 0L, 0L, 0L, List.of());
+    }
+  }
+
+  /** Single tenant currently in DRAFT / onboarding state. */
+  public record OnboardingAlertItem(
+      String tenantId,
+      String code,
+      String name,
+      String status) {}
+
+  /** List of tenants in onboarding — up to 10. */
+  public record OnboardingAlertsPayload(
+      List<OnboardingAlertItem> items,
+      int count) {
+
+    public static OnboardingAlertsPayload empty() {
+      return new OnboardingAlertsPayload(List.of(), 0);
+    }
+  }
+
+  /** Platform-wide alerts placeholder (TODO V2 — no aggregate query yet). */
+  public record PlatformAlertsPayload(
+      List<AlertItem> items,
+      int count) {
+
+    public static PlatformAlertsPayload empty() {
+      return new PlatformAlertsPayload(List.of(), 0);
+    }
+  }
 }
